--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
 <p>In <a href="./category/education.html">Education</a>.</p>
 
 </footer><!-- /.post-info -->      <p>Nolan is a rising Junior at the University of Michigan - Ann Arbor. He is majoring in Industrial &amp; Operations Engineering, with an International Minor for Engineers.</p>
-<p>Nolan graduated from Okemos High School in 2016, and featured in the OHS Earth Club's first 'Green Tip of the Week,' seen https://www.youtube.com/watch?v=zy37P91NTD</p>
+<p>Nolan graduated from Okemos High School in 2016, and featured in the OHS Earth Club's first 'Green Tip of the Week,' which can be seen [using this link] (https://www.youtube.com/watch?v=zy37P91NTD)</p>
     </div><!-- /.entry-content -->
 
   </article>
