--- a/archives.html
+++ b/archives.html
@@ -60,6 +60,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>16 Jul 2018</td>
+        <td><a href='./week-1.html'>Week 1</a></td>
+        </tr>
+        <tr>
         <td>29 May 2018</td>
         <td><a href='./pre-study-abroad.html'>Pre Study Abroad</a></td>
         </tr>
