--- a/week-1.html
+++ b/week-1.html
@@ -66,8 +66,9 @@ by <a class="url fn" href="./author/nolanfeeny.html">nolanfeeny</a>
         </div>
 	
         <div><h1>Iceland</h1>
-<p><img alt="Restaurant" src="./images/salt.jpg" width="350"></p>
+<p><img alt="Harbor" src="./images/harbor.jpg"></p>
 <p>On my way to Berlin, I had a 19 hour layover in Iceland from July 5-6. Coincidentally, my uncle and two of his friends were also in Iceland during my time, so they were able to show me around Reykjavik. I arrived at around 11 am - most of my time was spent in the city near the harbor, and I was able to go on a whale watching boat ride, and saw a minke whale and puffins which were pretty cool. The harbor had a lot of restaurants with different themes: I ate at a Haitian cafe and had dinner at a place called ‘Salt’, which had the best bread and butter I’ve ever had in my life.</p>
+<p><img alt="Restaurant" src="./images/salt.jpg" width="350"></p>
 <p>I stayed the night at a ‘hotel’, which was really more like a bed &amp; breakfast without the breakfast. It was super nice though, and the ability to take a shower and sit in a hot tub while the sun was shining at midnight was really cool. At about 4 am I went back to the airport to head off to Berlin.</p>
 <p><img alt="Hotel" src="./images/hotel.jpg"></p>
 <p>One extra note about Iceland - it has a lot of renewable energy sources, especially with long daylight hours, available water, windy bluffs, and geothermal springs. I believe has the potential to run completely on renewable energy, and to be a world leader in the progression of that movement. At some point I really want to go back and work on implementing that on a national scale.</p>
@@ -109,7 +110,6 @@ by <a class="url fn" href="./author/nolanfeeny.html">nolanfeeny</a>
                 Categories
                 </li>
                 
-                <li><a href="./category/about.html">About</a></li>
                 <li><a href="./category/blog.html">Blog</a></li>
                 <li><a href="./category/pages.html">Pages</a></li>
                    
