--- a/archives.html
+++ b/archives.html
@@ -60,6 +60,18 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>05 Aug 2018</td>
+        <td><a href='./week-4.html'>Week 4</a></td>
+        </tr>
+        <tr>
+        <td>30 Jul 2018</td>
+        <td><a href='./week-3.html'>Week 3</a></td>
+        </tr>
+        <tr>
+        <td>23 Jul 2018</td>
+        <td><a href='./week-2.html'>Week 2</a></td>
+        </tr>
+        <tr>
         <td>16 Jul 2018</td>
         <td><a href='./week-1.html'>Week 1</a></td>
         </tr>
